gcc/testsuite/algol68/compile/error-string-break-8.a68
begin string s =
         "'(Uf09f94a5)"; { dg-error "Unicode" }
      skip
end
